--- a/logging.html.md.erb
+++ b/logging.html.md.erb
@@ -5,7 +5,7 @@ owner: BBR
 
 This topic provides information about BBR logging. Use this information when troubleshooting a failed backup or restore using BBR.
 
-By default, BBR displays the following:
+By default, BBR displays:
 
 * The backup and restore scripts that it finds
 * When it starts or finishes a stage, such as `pre-backup scripts` or `backup scripts`
@@ -19,4 +19,4 @@ If more logging is needed, use the optional `--debug` flag to print the followin
 * Logs about the API requests made to the BOSH server
 * All commands executed on remote instances
 * All commands executed on local environment
-* Standard out and standard error streams for the backup and restore scripts when they are executed
+* stdout and stderr streams for the backup and restore scripts when they are executed
