--- a/logging.html.md.erb
+++ b/logging.html.md.erb
@@ -12,7 +12,7 @@ By default, BBR displays:
 * When the process is complete
 * When any error occurs
 
-BBR writes any errors associated with stack traces to a file in of the form `bbr-TIMESTAMP.err.log` in the current directory.
+BBR writes any errors associated with stack traces to a file in the form of `bbr-TIMESTAMP.err.log` in the current directory.
 
 If more logging is needed, use the optional `--debug` flag to print the following information:
 
