fix a garbled sentence[#166758956]

--- a/backup.html.md.erb
+++ b/backup.html.md.erb
@@ -307,7 +307,9 @@ If the backup fails for the BOSH Director or deployment, follow these steps:
 ## <a id='cancel-backup'></a>Cancel a Backup
 
 Backups can take a long time.
-You might want to cancel a backup if you learn it is going to fail that your developers urgently need to push an app.
+You might want to cancel a backup, for example, if you learn that the backup is going to fail
+or that your developers urgently need to push an app.
+
 To cancel a backup:
 
 1. Terminate the BBR process by pressing Ctrl-C and typing `yes` to confirm.
