--- a/restore.html.md.erb
+++ b/restore.html.md.erb
@@ -15,7 +15,7 @@ This section describes the restrictions for a backup artifact to be restorable t
 This section is for guidance only, and <%= vars.recommended_by %> recommends that operators validate their backups
 by using the backup artifacts in a restore.
 
-The restrictions for a backup artifact to be restorable are the following:
+The restrictions for a backup artifact to be restorable are:
 
 + **Topology**: BBR requires the BOSH topology of a deployment to be the same in the restore
 environment as it was in the backup environment.
@@ -31,7 +31,7 @@ might succeed although the restored MySQL database is unusable.
 <p class="note"><strong>Note</strong>: A change in VM size or underlying hardware should not affect
 BBR's ability to restore data, as long as there is adequate storage space to restore the data.</p>
 
-## <a id="recreate-vms"></a> Step 1: Recreate VMs
+## <a id="recreate-vms"></a> Step 1: Re-create VMs
 
 Before restoring a BOSH deployment or Director, you must create the VMs that constitute that
 deployment or Director.
@@ -41,16 +41,16 @@ manifest.
 If you used the `--with-manifest` flag when running the BBR backup command, your backup artifact
 includes a copy of your manifest.
 
-Alternatively, if you are restoring a deployment and you have already restored the Director which
-contains knowledge of this deployment, as long as the
-[BOSH Resurrector](https://bosh.io/docs/resurrector.html) is enabled your VMs for the deployment
-will be brought back by the Director.
+Alternatively, if you are restoring a deployment and you have already restored the Director that
+contains knowledge of this deployment, the Director brings back your VMs for the deployment if
+the BOSH Resurrector is enabled.
+For more information about the BOSH Resurrector, see [Auto-healing Capabilities] in the BOSH documentation.
 
 ## <a id="artifacts-jumpbox"></a> Step 2: Transfer Artifacts to Jumpbox
 
 Move your BBR backup artifact from your safe storage location to the jumpbox.
 
-For instance, you could run the following command to SCP the backup artifact to your jumpbox:
+For instance, to SCP the backup artifact to your jumpbox you could run:
 
 ```
 scp LOCAL-PATH-TO-BACKUP-ARTIFACT JUMPBOX-USER/JUMPBOX-ADDRESS
@@ -59,41 +59,42 @@ scp LOCAL-PATH-TO-BACKUP-ARTIFACT JUMPBOX-USER/JUMPBOX-ADDRESS
 If this artifact is encrypted, you must decrypt it.
 
 ## <a id='restore'></a> Step 3: Restore
-<p class="note"><strong>Note</strong>: The BBR restore command can take a long time to complete.
+<p class="note"><strong>Note:</strong> The BBR restore command can take a long time to complete.
 You can run it independently of the SSH session so that the process can continue running even if
 your connection to the jumpbox fails. The command above uses <code>nohup</code>, but you run
 the command in a <code>screen</code> or <code>tmux</code> session instead.</p>
 
-Use the optional `--debug` flag to enable debug logs. See the [BBR Logging](logging.html) topic for more information.
+Use the optional `--debug` flag to enable debug logs. For more information, see [BBR Logging](logging.html).
 
 #### <a id='restore-director'></a> Restore a BOSH Director
 
 Perform the following steps to restore a BOSH Director:
 
-1. Ensure the BOSH Director backup artifact is in the folder you will run BBR from.
+1. Ensure the BOSH Director backup artifact is in the directory from which you run BBR.
 1. Run the BBR restore command from your jumpbox to restore the BOSH Director:
 
     ```
-    nohup bbr director \  
+    nohup bbr director \
     --private-key-path PATH-TO-PRIVATE-KEY \
     --username USER-NAME \
     --host HOST \
     restore \
     --artifact-path PATH-TO-DIRECTOR-BACKUP
     ```
+
     Replace the placeholder values as follows:
     * `PATH-TO-PRIVATE-KEY`: This is the path to the SSH private key used to connect to the BOSH Director.
     * `USER-NAME`: This is the SSH username of the BOSH Director.
     * `HOST`: This is the address of the BOSH Director with an optional port that defaults to 22. If the BOSH Director is public, this is a URL, such as `https://my-bosh.xxx.cf-app.com`. Otherwise, this is the BOSH Director IP address.
-	* `PATH-TO-DIRECTOR-BACKUP`: This is the path to the BOSH Director backup you want to restore.
+	  * `PATH-TO-DIRECTOR-BACKUP`: This is the path to the BOSH Director backup you want to restore.
 
-If the command fails, follow the steps in [Recover from a Failing Command](#recover-from-failing-command).
+If the command fails, follow the steps in [Recover from a Failing Command](#recover-from-failing-command) below.
 
 #### <a id='restore-deployment'></a> Restore a BOSH Deployment
 
 Perform the following steps to restore a BOSH deployment:
 
-1. Ensure the BOSH deployment backup artifact is in the folder you will run BBR from.
+1. Ensure the BOSH deployment backup artifact is in the directory from which you run BBR.
 1. Run the BBR restore:
 
     ```
@@ -106,14 +107,15 @@ Perform the following steps to restore a BOSH deployment:
     restore \
     --artifact-path PATH-TO-DEPLOYMENT-BACKUP
     ```
+
     Replace the placeholder values as follows:
-    * `BOSH-CLIENT`, `BOSH-CLIENT-SECRET`: If you have a BOSH Director with User Account and Authentication (UAA) as the authentication provider, use a UAA client as the username and a UAA client secret as the password. If you have a BOSH Director with basic auth configured, use your username and password.
+    * `BOSH-CLIENT`, `BOSH-CLIENT-SECRET`: If you have a BOSH Director with User Account and Authentication (UAA) as the authentication provider, use a UAA client as the username and a UAA client secret as the password. If you have a BOSH Director with basic authentication configured, use your username and password.
     * `BOSH-TARGET`: This is the FQDN or IP address of your BOSH Director.
     * `DEPLOYMENT-NAME`: This is the name of the deployment you want to restore.
     * `PATH-TO-BOSH-CA-CERTIFICATE`: This is the path to the BOSH Director's Certificate Authority (CA) certificate if the certificate is not verifiable by the local machine's certificate chain.
-	* `PATH-TO-DEPLOYMENT-BACKUP`: This is the path to the BOSH deployment backup you want to restore.
+	  * `PATH-TO-DEPLOYMENT-BACKUP`: This is the path to the BOSH deployment backup you want to restore.
 
-If the command fails, follow the steps in [Recover from a Failing Command](#recover-from-failing-command).
+If the command fails, follow the steps in [Recover from a Failing Command](#recover-from-failing-command) below.
 
 ## <a id="recover-from-failing-command"></a>Recover from a Failing Command
 1. Ensure all the parameters in the command are set.
@@ -121,24 +123,28 @@ If the command fails, follow the steps in [Recover from a Failing Command](#reco
 1. Ensure the specified BOSH deployment exists.
 1. Ensure that the jumpbox can reach the BOSH Director.
 1. Ensure the source BOSH deployment is compatible with the target BOSH deployment.
-1. If you see the error message `Directory /var/vcap/store/bbr-backup already exists on instance`,
-run the relevant cleanup command. See [Clean Up after Failed Restore](#manual-clean).
+1. If you see the error message `Directory /var/vcap/store/bbr-backup already exists on instance`, follow the
+steps in [Clean Up after Failed Restore](#manual-clean) below.
 
 ## <a id='cancel-restore'></a>Cancel a Restore
 
-If you need to cancel a restore, perform the following steps:
+To cancel a restore:
 
 1. Terminate the BBR process by pressing Ctrl-C and typing `yes` to confirm.
-1. Stopping a restore can leave the system in an unusable state and prevent future restores.
-   Perform the procedures in the [Clean Up after Failed Restore](#manual-clean) section to enable future restores.
+
+Stopping a restore can leave the system in an unusable state and prevent future restores.
+Perform the procedures in the [Clean Up after Failed Restore](#manual-clean) section below to ensure you can
+perform future restores.
 
 ## <a id="manual-clean"></a>Clean Up after Failed Restore
 
-If your restore process fails, then the process may leave the BBR restore folder on the instance. As a result, any subsequent restore attempts may also fail. In addition, BBR may not have run the post-restore scripts, which can leave the instance in a locked state.
+If your restore process fails, then the process might leave the BBR restore directory on the instance.
+As a result, any subsequent restore attempts might fail.
+In addition, BBR might not have run the post-restore scripts, which can leave the instance in a locked state.
 
-In order to resolve these issues, run the BBR cleanup script.
+To resolve these issues, run the BBR cleanup script.
 
-To clean up after a failed BOSH Director restore, run the following command:
+To clean up after a failed BOSH Director restore, run:
 
 ```
 bbr director \
@@ -148,7 +154,7 @@ bbr director \
 restore-cleanup
 ```
 
-To clean up after a failed BOSH deployment restore, run the following command:
+To clean up after a failed BOSH deployment restore, run:
 
 ```
 BOSH_CLIENT_SECRET=BOSH-CLIENT-SECRET \
