Add 1.6.0 BBR release notes
[#170797827]

--- a/bbr-rn.html.md.erb
+++ b/bbr-rn.html.md.erb
@@ -5,6 +5,18 @@ owner: Release Engineering
 
 ## <a id='releases'></a> Releases
 
+### <a id='1-6-0'></a> v1.6.0
+
+**Release Date**: January 27, 2020
+
+#### Features
+
+* Progress indication for backup files when BBR transfer files to the BBR client
+
+#### Improvements
+
+* Updated golang to 1.13
+
 ### <a id='1-5-2'></a> v1.5.2
 
 **Release Date**: August 29, 2019
