--- a/bbr-rn.html.md.erb
+++ b/bbr-rn.html.md.erb
@@ -11,7 +11,8 @@ owner: Release Engineering
 
 #### Features
 
-* Progress indication for backup files when BBR transfer files to the BBR client
+* Added a output log message for the remaining byte percentage of backup files 
+ when backing up your deployment.
 
 #### Improvements
 
