--- a/bbr-rn.html.md.erb
+++ b/bbr-rn.html.md.erb
@@ -11,7 +11,7 @@ owner: Release Engineering
 
 #### Features
 
-* Added a output log message for the remaining byte percentage of backup files 
+* Added an output log message for the remaining byte percentage of backup files 
  when backing up your deployment.
 
 #### Improvements
