Add release notes for bbr 1.7.0
[#170920500]

Signed-off-by: Gareth Smith <gsmith@pivotal.io>

--- a/bbr-rn.html.md.erb
+++ b/bbr-rn.html.md.erb
@@ -5,14 +5,21 @@ owner: Release Engineering
 
 ## <a id='releases'></a> Releases
 
+### <a id='1-7-0'></a> v1.7.0
+
+**Release Date**: Feb 3, 2020
+
+#### Features
+
+* Added an output log message for the remaining byte percentage of restore files when restoring your deployment.
+
 ### <a id='1-6-0'></a> v1.6.0
 
 **Release Date**: January 27, 2020
 
 #### Features
 
-* Added an output log message for the remaining byte percentage of backup files 
- when backing up your deployment.
+* Added an output log message for the remaining byte percentage of backup files when backing up your deployment.
 
 #### Improvements
 
