--- a/cf-backup.html.md.erb
+++ b/cf-backup.html.md.erb
@@ -49,13 +49,13 @@ in GitHub.
 
 ### <a id='supported-blobstore-backup-configurations'></a>Selective Backup and Restore Configurations for Blobstores
 
-When configuring your blobstore, you can choose to use an external blobstore instead
+You can use an external blobstore instead
 of the default internal blobstore. For more information about supported external
 blobstores, see [Backup and Restore for External Blobstores](external-blobstores.html).
 
 When BBR backs up and restores your Cloud Foundry blobstore, it includes droplets, buildpacks, and packages
 by default.
-You can choose to omit specific blobstore content from your backup and restore
+You can omit specific blobstore content from your backup and restore
 using the following ops files:
 
 | Selective Backup Ops File                                                                                                                                                                                            | Content Included in Backup |
