--- a/external-blobstores.html.md.erb
+++ b/external-blobstores.html.md.erb
@@ -39,7 +39,7 @@ you must co-locate the `s3-unversioned-blobstore-backup-restorer` job from the [
 
 1. Verify that your blobstore is either an Amazon S3 bucket or an S3-compatible bucket with support for AWS Signature Version 4.
 
-    <p class="note"><strong>Note</strong>: If your S3-compatible blobstore uses a custom CA certificate, see <a href="https://bosh.io/docs/trusted-certs.html">Configuring Trusted Certificates</a> in the <a href="https://bosh.io/docs">BOSH documentation</a>.
+    <p class="note"><strong>Note:</strong> If your S3-compatible blobstore uses a custom CA certificate, see <a href="https://bosh.io/docs/trusted-certs.html">Configuring Trusted Certificates</a> in the <a href="https://bosh.io/docs">BOSH documentation</a>.
      BBR automatically makes use of your configured trusted certificates.
     </p>
 
