--- a/installing.html.md.erb
+++ b/installing.html.md.erb
@@ -56,7 +56,7 @@ Consult the following table for more information about the network access permis
 
 ## <a id='scp'></a>Step 2: Transfer BBR to Your Jumpbox
 
-If you choose to run your BBR command from the jumpbox, perform the following
+If you run your BBR command from the jumpbox, perform the following
 steps to transfer the `bbr` binary to your jumpbox:
 
 1. Download the latest BBR release from the
