--- a/backup.html.md.erb
+++ b/backup.html.md.erb
@@ -43,7 +43,7 @@ Where:
    you must run the BBR commands in this topic from within your jumpbox.
 </p>
 
-
+### <a id='bosh-all-proxy'></a> Option 2: Connect with BOSH\_ALL\_PROXY
 
 You can use the environment variable `BOSH_ALL_PROXY` to open an SSH tunnel with
 SOCKS5 to the jumpbox.
