--- a/bbr-rn.html.md.erb
+++ b/bbr-rn.html.md.erb
@@ -5,6 +5,12 @@ owner: Release Engineering
 
 ## <a id='releases'></a> Releases
 
+### <a id='1-7-2'></a> v1.7.2
+
+**Release Date**: March 4, 2020
+
+Updated dependencies
+
 ### <a id='1-7-0'></a> v1.7.0
 
 **Release Date**: February 3, 2020
