--- a/bbr-rn.html.md.erb
+++ b/bbr-rn.html.md.erb
@@ -9,7 +9,9 @@ owner: Release Engineering
 
 **Release Date**: March 4, 2020
 
-Updated dependencies
+#### Features
+
+* Updated dependancies to include a security fix.
 
 ### <a id='1-7-0'></a> v1.7.0
 
