--- a/bbr-rn.html.md.erb
+++ b/bbr-rn.html.md.erb
@@ -9,7 +9,8 @@ owner: Release Engineering
 
 **Release Date**: March 4, 2020
 
-#### Features
+## Security Fix
+This release includes the following security fix:
 
 * Updated dependancies to include a security fix.
 
