--- a/bbr-rn.html.md.erb
+++ b/bbr-rn.html.md.erb
@@ -9,8 +9,7 @@ owner: Release Engineering
 
 **Release Date**: March 4, 2020
 
-## Security Fix
-This release includes the following security fix:
+#### Security Fix
 
 * Updated dependancies to include a security fix.
 
