Tag where alt text is needed [#174360877]

--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -67,7 +67,7 @@ BBR drains and tars the backup artifacts to the jumpbox from where the operator 
 
 The following diagram shows a sample backup flow.
 
-<%= image_tag("backup-flow.png", :alt => "Backup Workflow") %>
+<%= image_tag("backup-flow.png", :alt => "Backup Workflow") %><%# Images require alt text that describes the image in detail. %>
 
 
 ## <a id='workflow-restore'></a>What happens when you run a BBR restore?
