Add 1.8.0 release notes

--- a/bbr-rn.html.md.erb
+++ b/bbr-rn.html.md.erb
@@ -5,6 +5,16 @@ owner: Release Engineering
 
 ## <a id='releases'></a> Releases
 
+### <a id='1-8-0'></a> v1.8.0
+
+**Release Date**: September 22, 2020
+
+#### Features
+
+ * This version introduces the bbr S3 configuration validator. A tool you can
+   install on your BBR VM in order to test your configuration and connectivity to
+   an external blobstore.
+
 ### <a id='1-7-2'></a> v1.7.2
 
 **Release Date**: March 4, 2020
