Minor edits to PR #74 [#175010078]

--- a/bbr-rn.html.md.erb
+++ b/bbr-rn.html.md.erb
@@ -11,9 +11,10 @@ owner: Release Engineering
 
 #### Features
 
- * This version introduces the bbr S3 configuration validator. A tool you can
-   install on your BBR VM in order to test your configuration and connectivity to
-   an external blobstore.
+* **BOSH Backup and Restore (BBR) S3 configuration validator:**
+This version introduces the BBR S3 configuration validator.
+You can install this tool on your BBR VM to test your configuration and connectivity to
+an external blobstore.
 
 ### <a id='1-7-2'></a> v1.7.2
 
