--- a/bbr-rn.html.md.erb
+++ b/bbr-rn.html.md.erb
@@ -14,7 +14,7 @@ owner: Release Engineering
 * **BOSH Backup and Restore (BBR) S3 configuration validator:**
 This version introduces the BBR S3 configuration validator.
 You can install this tool on your BBR VM to test your configuration and connectivity to
-an external blobstore.
+an external blobstore. See its [README](https://github.com/cloudfoundry-incubator/bosh-backup-and-restore/blob/master/s3-config-validator/README.md#installation) for installation instructions and usage.
 
 ### <a id='1-7-2'></a> v1.7.2
 
