--- a/bbr-rn.html.md.erb
+++ b/bbr-rn.html.md.erb
@@ -15,7 +15,7 @@ owner: Release Engineering
 This version introduces the BBR S3 configuration validator.
 You can install this tool on your BBR VM to test your configuration and connectivity to
 an external blobstore. 
-For more information, see the [BBR S3 bucket configuration validator README](https://github.com/cloudfoundry-incubator/bosh-backup-and-restore/blob/master/s3-config-validator/README.md#bbr-s3-bucket-configuration-validator) for installation instructions and usage
+For installation and usage instructions, see the [BBR S3 bucket configuration validator README](https://github.com/cloudfoundry-incubator/bosh-backup-and-restore/blob/master/s3-config-validator/README.md#bbr-s3-bucket-configuration-validator) 
 on GitHub.
 
 ### <a id='1-7-2'></a> v1.7.2
