Add release notes for BBR 1.8.1

--- a/bbr-rn.html.md.erb
+++ b/bbr-rn.html.md.erb
@@ -5,6 +5,22 @@ owner: Release Engineering
 
 ## <a id='releases'></a> Releases
 
+### <a id='1-8-1'></a> v1.8.1
+
+**Release Date**: October 23, 2020
+
+#### Features
+
+ * Add specific error message if network drops during SSH.
+
+### Fixes
+
+ * Update all golang dependencies. In particular, the latest bosh and bosh-utils libraries include bug fixes for the way BOSH_ALL_PROXY is handled.
+
+### Other
+
+ * Add the S3 config validator's source code.
+
 ### <a id='1-8-0'></a> v1.8.0
 
 **Release Date**: September 22, 2020
