Further edits for PR #76 [#175477041]

--- a/bbr-rn.html.md.erb
+++ b/bbr-rn.html.md.erb
@@ -11,7 +11,7 @@ owner: Release Engineering
 
 #### Features
 
-* **New error message:** Adds specific error message if network drops during SSH.
+* **New error message:** There is now a specific error message if the network drops during SSH.
 * **S3 configuration validator:** The source code has been added.
 
 #### Fixes
