Apply feedback from PR author [#175477041]

--- a/bbr-rn.html.md.erb
+++ b/bbr-rn.html.md.erb
@@ -16,9 +16,7 @@ owner: Release Engineering
 
 #### Fixes
 
-* **Updates all golang dependencies:**
-In particular, the latest `bosh` and `bosh-utils` libraries include bug fixes
-for the way `BOSH_ALL_PROXY` is handled.
+* **Updates all dependencies.**
 
 
 ### <a id='1-8-0'></a> v1.8.0
