Updates golang dependencies to match github release notes [#175477041]

--- a/bbr-rn.html.md.erb
+++ b/bbr-rn.html.md.erb
@@ -16,7 +16,7 @@ owner: Release Engineering
 
 #### Fixes
 
-* **Updates all dependencies.**
+* **Updates all golang dependencies.**
 
 
 ### <a id='1-8-0'></a> v1.8.0
